Add responsive styling
install @nuxtjs/google-fonts

--- a/assets/styles/globals.scss
+++ b/assets/styles/globals.scss
@@ -1,5 +1,5 @@
 html {
-  font-family: sans-serif;
+  font-family: 'Source Sans Pro', sans-serif;
   // font-size: 20px;
   color: var(--text-primary)
 }
