Add a little submit animation

--- a/assets/styles/variables.scss
+++ b/assets/styles/variables.scss
@@ -17,6 +17,8 @@ $units: 420, 332, 200, 108, 100, 52, 40, 36, 32, 28, 24, 20, 16, 12, 10, 8, 4, 2
   --text-dark-blue: #49485e;
   --text-gray: #b4b4b4;
 
+  --success: rgb(0, 102, 122);
+
   --shadow-card: 0px 20px 30px rgba(0, 0, 0, 0.04),
     0px 6px 10px rgba(0, 0, 0, 0.02);
   --shadow-card-hover: 0px 24px 36px rgba(0, 0, 0, 0.06),
